packages/dartcv/src/dartcv/stitching/stitching.h

CvStatus* cv_Stitcher_create(int mode, Stitcher* rval);
double cv_Stitcher_get_registrationResol(Stitcher self);
void cv_Stitcher_set_registrationResol(Stitcher self, double val);
double cv_Stitcher_get_seamEstimationResol(Stitcher self);
void cv_Stitcher_set_seamEstimationResol(Stitcher self, double val);
double cv_Stitcher_get_compositingResol(Stitcher self);
void cv_Stitcher_set_compositingResol(Stitcher self, double val);
double cv_Stitcher_get_panoConfidenceThresh(Stitcher self);
void cv_Stitcher_set_panoConfidenceThresh(Stitcher self, double val);
bool cv_Stitcher_get_waveCorrection(Stitcher self);
void cv_Stitcher_set_waveCorrection(Stitcher self, bool val);
int cv_Stitcher_get_interpolationFlags(Stitcher self);
void cv_Stitcher_set_interpolationFlags(Stitcher self, int val);
int cv_Stitcher_get_waveCorrectKind(Stitcher self);
void cv_Stitcher_set_waveCorrectKind(Stitcher self, int val);
// Scale the registration step ran at, i.e. the ratio between the resolution
// features were found at and the full input resolution. Camera parameters
// returned by cv_Stitcher_cameras are expressed at that scale.
double cv_Stitcher_get_workScale(Stitcher self);
// The projection surface the panorama is composed onto. The default is
// spherical for STITCHING_PANORAMA and affine for STITCHING_SCANS; cylindrical
// is the one that fits labels wrapped around a bottle or a can. The getter hands
// back a new handle owning a reference to the stitcher's current creator; the
// caller must release it with cv_WarperCreator_close.
CvStatus* cv_Stitcher_get_warper(Stitcher self, WarperCreator* rval);
CvStatus* cv_Stitcher_set_warper(Stitcher self, WarperCreator warper);
CvStatus* cv_Stitcher_estimateTransform(
    Stitcher self, VecMat mats, VecMat masks, int* rval, CvCallback_0 callback
);
// Restores the camera rotations and intrinsics estimated by a previous
// cv_Stitcher_estimateTransform, optionally after editing them (see
// cv_detail_waveCorrect). `component` may be an empty vector, in which case
// every image is used.
CvStatus* cv_Stitcher_setTransform(
    Stitcher self,
    VecMat mats,
    VecCameraParams cameras,
    VecI32 component,
    int* rval,
    CvCallback_0 callback
);
CvStatus* cv_Stitcher_composePanorama_1(
    Stitcher self, VecMat mats, Mat rpano, int* rval, CvCallback_0 callback
);
CvStatus* cv_Stitcher_stitch(
    Stitcher self, VecMat mats, Mat rpano, int* rval, CvCallback_0 callback
);
CvStatus* cv_Stitcher_stitch_1(
    Stitcher self, VecMat mats, VecMat masks, Mat rpano, int* rval, CvCallback_0 callback
);
// 8U mask of the composed panorama: 255 where a source image contributed,
// 0 elsewhere. `rmask` must be an allocated Mat and is overwritten.
CvStatus* cv_Stitcher_resultMask(Stitcher self, Mat rmask, CvCallback_0 callback);
// Builds one of the cv::WarperCreator factories, see the STITCHING_WARPER_*
// enum. Only the parametric projections read `a` and `b` (both default to 1 in
// OpenCV).
CvStatus* cv_WarperCreator_create(int type, float a, float b, WarperCreator* rval);
void cv_WarperCreator_close(WarperCreatorPtr self);
// Instantiates the warper this factory creates at the given scale, usually the
// median focal length of the cameras.
CvStatus* cv_WarperCreator_createWarper(WarperCreator self, float scale, RotationWarper* rval);
// Allocates the vector natively, so it is released by cv_VecCameraParams_close
// alone — the caller never allocates the wrapper struct itself.
VecCameraParams* cv_VecCameraParams_new(size_t length);
void cv_VecCameraParams_close(VecCameraParamsPtr self);
size_t cv_VecCameraParams_length(VecCameraParams self);
// Reads element `index`. `R` and `t` must be allocated Mats and are overwritten
// with copies, so they stay valid after the vector is freed.
CvStatus* cv_VecCameraParams_get(
    VecCameraParams self,
    int index,
    double* focal,
    double* aspect,
    double* ppx,
    double* ppy,
    Mat R,
    Mat t,
    CvCallback_0 callback
);
// Overwrites element `index`; `R` and `t` are copied.
CvStatus* cv_VecCameraParams_set(
    VecCameraParams self,
    int index,
    double focal,
    double aspect,
    double ppx,
    double ppy,
    Mat R,
    Mat t,
    CvCallback_0 callback
);
CvStatus* cv_Stitcher_get_featuresFinder(Stitcher self, FeaturesFinder* rval);
CvStatus* cv_Stitcher_set_featuresFinder(Stitcher self, FeaturesFinder finder);
CvStatus* cv_Stitcher_get_featuresMatcher(Stitcher self, FeaturesMatcher* rval);
CvStatus* cv_Stitcher_set_featuresMatcher(Stitcher self, FeaturesMatcher matcher);
// Square 8U mask over image pairs: element (i, j) non-zero means "consider
// matching image i against image j". Restricting it to neighbours is the cheap
// way to stop an ordered capture matching across the whole sequence.
CvStatus* cv_Stitcher_get_matchingMask(Stitcher self, Mat rval, CvCallback_0 callback);
CvStatus* cv_Stitcher_set_matchingMask(Stitcher self, Mat mask);
CvStatus* cv_Stitcher_get_estimator(Stitcher self, Estimator* rval);
CvStatus* cv_Stitcher_set_estimator(Stitcher self, Estimator estimator);
CvStatus* cv_Stitcher_get_bundleAdjuster(Stitcher self, BundleAdjuster* rval);
CvStatus* cv_Stitcher_set_bundleAdjuster(Stitcher self, BundleAdjuster adjuster);
CvStatus* cv_Stitcher_get_exposureCompensator(Stitcher self, ExposureCompensator* rval);
CvStatus* cv_Stitcher_set_exposureCompensator(Stitcher self, ExposureCompensator compensator);
CvStatus* cv_Stitcher_get_seamFinder(Stitcher self, SeamFinder* rval);
CvStatus* cv_Stitcher_set_seamFinder(Stitcher self, SeamFinder finder);
CvStatus* cv_Stitcher_get_blender(Stitcher self, Blender* rval);
CvStatus* cv_Stitcher_set_blender(Stitcher self, Blender blender);
// cv::detail::waveCorrect. Straightens a panorama by rotating every camera so
// the horizon stays level; `rmats` is modified in place and its elements must be
// 3x3 CV_32F. STITCHING_WAVE_CORRECT_AUTO picks the kind per
// cv_detail_autoDetectWaveCorrectKind.
CvStatus* cv_detail_waveCorrect(VecMat rmats, int kind, CvCallback_0 callback);
// cv::detail::autoDetectWaveCorrectKind. Reports whether the panorama spans
// horizontally or vertically, as a STITCHING_WAVE_CORRECT_* value.
CvStatus* cv_detail_autoDetectWaveCorrectKind(VecMat rmats, int* rval, CvCallback_0 callback);