packages/dartcv/lib/src/g/stitching.g.dart


@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, VecMat, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_composePanorama_1(
  Stitcher self$1,
  VecMat mats,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Pointer<Stitcher>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_create(
  int mode,
  ffi.Pointer<Stitcher> rval,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(Stitcher, VecMat, VecMat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)
>()
external ffi.Pointer<CvStatus> cv_Stitcher_estimateTransform(
  Stitcher self$1,
  VecMat mats,
  VecMat masks,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<Blender>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_blender(
  Stitcher self$1,
  ffi.Pointer<Blender> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<BundleAdjuster>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_bundleAdjuster(
  Stitcher self$1,
  ffi.Pointer<BundleAdjuster> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_compositingResol(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<Estimator>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_estimator(
  Stitcher self$1,
  ffi.Pointer<Estimator> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<ExposureCompensator>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_exposureCompensator(
  Stitcher self$1,
  ffi.Pointer<ExposureCompensator> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<FeaturesFinder>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_featuresFinder(
  Stitcher self$1,
  ffi.Pointer<FeaturesFinder> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<FeaturesMatcher>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_featuresMatcher(
  Stitcher self$1,
  ffi.Pointer<FeaturesMatcher> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Int Function(Stitcher)>()
external int cv_Stitcher_get_interpolationFlags(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Mat, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_matchingMask(
  Stitcher self$1,
  Mat rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_panoConfidenceThresh(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_registrationResol(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_seamEstimationResol(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<SeamFinder>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_seamFinder(
  Stitcher self$1,
  ffi.Pointer<SeamFinder> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ffi.Pointer<WarperCreator>)>()
external ffi.Pointer<CvStatus> cv_Stitcher_get_warper(
  Stitcher self$1,
  ffi.Pointer<WarperCreator> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Int Function(Stitcher)>()
external int cv_Stitcher_get_waveCorrectKind(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Bool Function(Stitcher)>()
external bool cv_Stitcher_get_waveCorrection(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Double Function(Stitcher)>()
external double cv_Stitcher_get_workScale(
  Stitcher self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Mat, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_resultMask(
  Stitcher self$1,
  Mat rmask,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    Stitcher,
    VecMat,
    VecCameraParams,
    VecI32,
    ffi.Pointer<ffi.Int>,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_Stitcher_setTransform(
  Stitcher self$1,
  VecMat mats,
  VecCameraParams cameras,
  VecI32 component,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Blender)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_blender(
  Stitcher self$1,
  Blender blender,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, BundleAdjuster)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_bundleAdjuster(
  Stitcher self$1,
  BundleAdjuster adjuster,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_compositingResol(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Estimator)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_estimator(
  Stitcher self$1,
  Estimator estimator,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, ExposureCompensator)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_exposureCompensator(
  Stitcher self$1,
  ExposureCompensator compensator,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, FeaturesFinder)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_featuresFinder(
  Stitcher self$1,
  FeaturesFinder finder,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, FeaturesMatcher)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_featuresMatcher(
  Stitcher self$1,
  FeaturesMatcher matcher,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Int)>()
external void cv_Stitcher_set_interpolationFlags(
  Stitcher self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, Mat)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_matchingMask(
  Stitcher self$1,
  Mat mask,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_panoConfidenceThresh(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_registrationResol(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Double)>()
external void cv_Stitcher_set_seamEstimationResol(
  Stitcher self$1,
  double val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, SeamFinder)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_seamFinder(
  Stitcher self$1,
  SeamFinder finder,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, WarperCreator)>()
external ffi.Pointer<CvStatus> cv_Stitcher_set_warper(
  Stitcher self$1,
  WarperCreator warper,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Int)>()
external void cv_Stitcher_set_waveCorrectKind(
  Stitcher self$1,
  int val,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(Stitcher, ffi.Bool)>()
external void cv_Stitcher_set_waveCorrection(
  Stitcher self$1,
  bool val,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(Stitcher, VecMat, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_Stitcher_stitch(
  Stitcher self$1,
  VecMat mats,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(Stitcher, VecMat, VecMat, Mat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)
>()
external ffi.Pointer<CvStatus> cv_Stitcher_stitch_1(
  Stitcher self$1,
  VecMat mats,
  VecMat masks,
  Mat rpano,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(VecCameraParamsPtr)>()
external void cv_VecCameraParams_close(
  VecCameraParamsPtr self$1,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    VecCameraParams,
    ffi.Int,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    Mat,
    Mat,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_VecCameraParams_get(
  VecCameraParams self$1,
  int index,
  ffi.Pointer<ffi.Double> focal,
  ffi.Pointer<ffi.Double> aspect,
  ffi.Pointer<ffi.Double> ppx,
  ffi.Pointer<ffi.Double> ppy,
  Mat R,
  Mat t,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Size Function(VecCameraParams)>()
external int cv_VecCameraParams_length(
  VecCameraParams self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<VecCameraParams> Function(ffi.Size)>()
external ffi.Pointer<VecCameraParams> cv_VecCameraParams_new(
  int length,
);

@meta.RecordUse()
@ffi.Native<
  ffi.Pointer<CvStatus> Function(
    VecCameraParams,
    ffi.Int,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    Mat,
    Mat,
    imp$1.CvCallback_0,
  )
>()
external ffi.Pointer<CvStatus> cv_VecCameraParams_set(
  VecCameraParams self$1,
  int index,
  double focal,
  double aspect,
  double ppx,
  double ppy,
  Mat R,
  Mat t,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Void Function(WarperCreatorPtr)>()
external void cv_WarperCreator_close(
  WarperCreatorPtr self$1,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Float, ffi.Float, ffi.Pointer<WarperCreator>)>()
external ffi.Pointer<CvStatus> cv_WarperCreator_create(
  int type,
  double a,
  double b,
  ffi.Pointer<WarperCreator> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(WarperCreator, ffi.Float, ffi.Pointer<RotationWarper>)>()
external ffi.Pointer<CvStatus> cv_WarperCreator_createWarper(
  WarperCreator self$1,
  double scale,
  ffi.Pointer<RotationWarper> rval,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(VecMat, ffi.Pointer<ffi.Int>, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_detail_autoDetectWaveCorrectKind(
  VecMat rmats,
  ffi.Pointer<ffi.Int> rval,
  imp$1.CvCallback_0 callback,
);

@meta.RecordUse()
@ffi.Native<ffi.Pointer<CvStatus> Function(VecMat, ffi.Int, imp$1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_detail_waveCorrect(
  VecMat rmats,
  int kind,
  imp$1.CvCallback_0 callback,
);

const addresses = _SymbolAddresses();
